# HomeWealth

./: CMakeLists.txt  main.cpp
core/: core.cpp  core.h  dataTypes.h  protocol.cpp  protocol.h
logger/: logger.cpp  logger.h
res/: HomeWealth.qrc  HomeWealth.rc
ui/HomeWealth/: HomeWealth.cpp  HomeWealth.h  HomeWealth.ui
ui/HomeWealth/AnimatedStackedWidget/: AnimatedStackedWidget.hpp
ui/HomeWealth/page/dialog_multiSelect_for_category/: dialog_multiSelect_for_category.cpp  dialog_multiSelect_for_category.h
ui/HomeWealth/page/page_category/: page_category.cpp  page_category.h  page_category.ui
ui/HomeWealth/page/page_category/delegate_radio/: delegate_radio.cpp  delegate_radio.h
ui/HomeWealth/page/page_category/dialog_inputCategory/: dialog_inputCategory.cpp  dialog_inputCategory.h  dialog_inputCategory.ui
ui/HomeWealth/page/page_edit/: page_edit.cpp  page_edit.h  page_edit.ui
ui/HomeWealth/page/page_edit/delegate_combox/: delegate_combox.cpp  delegate_combox.h
ui/HomeWealth/page/page_edit/dialog_input/: dialog_input.cpp  dialog_input.h  dialog_input.ui
ui/HomeWealth/page/page_edit/dialog_multiSelect/: dialog_multiSelect.cpp  dialog_multiSelect.h
ui/HomeWealth/page/page_edit/dialog_multiSelect_for_category/: dialog_multiSelect_for_category.cpp  dialog_multiSelect_for_category.h
ui/HomeWealth/page/page_edit/dialog_multiSelect_for_familyUser/: dialog_multiSelect_for_familyUser.cpp  dialog_multiSelect_for_familyUser.h
ui/HomeWealth/page/page_family/: page_family.cpp  page_family.h  page_family.ui
ui/HomeWealth/page/page_family/delegate_tableItemAlignCenter/: delegate_tableItemAlignCenter.hpp
ui/HomeWealth/page/page_family/dialog_insertUser/: dialog_insertUser.cpp  dialog_insertUser.h  dialog_insertUser.ui
ui/HomeWealth/page/page_main/: page_main.cpp  page_main.h  page_main.ui  page_main_backup.ui
ui/Login/: ClientLogin.cpp  ClientLogin.h  ClientLogin.ui
ui/RGBBorderWidget/: RGBBorderWidget.hpp
